--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       
       <meta data-rh="true" property="og:image" style="width: 100%; height: 100%;" content="https://lh5.googleusercontent.com/d/101TKw7t_Sewas9v_xJ1TgWQt1Q7vfbXI">
      
-<iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="" id="myFrame"></iframe>
+<iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbyDO0G3svYqrxAsrnaaEJDH2KmxtB68HCNZR1Px8wJUvYmsK-gvy7FNtvkhPwMw5SYtXQ/exec" id="myFrame"></iframe>
 
      <script>
        let link = window.location.href;
@@ -16,7 +16,7 @@
        let link2 = link1.split("&")[0];
        let link3 = "https://script.google.com/macros/s/AKfycbyDO0G3svYqrxAsrnaaEJDH2KmxtB68HCNZR1Px8wJUvYmsK-gvy7FNtvkhPwMw5SYtXQ/exec?seree="+link2.split("?")[1]
        console.log(link3)
-        if(link == "https://sereecar.github.io" || link == "https://sereecar.github.io/BangkokCerecar-secar/" || link == "https://sereecar.github.io/index.html"){
+        if(link == "https://sereecar.github.io/SEREECAR" || link == "https://sereecar.github.io/BangkokCerecar-secar/SEREECAR/" || link == "https://sereecar.github.io/index.html"){
            document.querySelector("#myFrame").setAttribute("src","https://script.google.com/macros/s/AKfycbyDO0G3svYqrxAsrnaaEJDH2KmxtB68HCNZR1Px8wJUvYmsK-gvy7FNtvkhPwMw5SYtXQ/exec")
         }else{
            document.querySelector("#myFrame").setAttribute("src",link3)
