--- a/pung.html
+++ b/pung.html
@@ -16,7 +16,7 @@
        let link2 = link1.split("&")[0];
        let link3 = "https://script.google.com/macros/s/AKfycbyDO0G3svYqrxAsrnaaEJDH2KmxtB68HCNZR1Px8wJUvYmsK-gvy7FNtvkhPwMw5SYtXQ/exec?seree="+link2.split("?")[1]
        console.log(link3)
-        if(link == "https://sereecar.github.io/SEREECAR/pung" || link == "https://sereecar.github.io/BangkokCerecar-secar/SEREECAR/pung/" || link == "https://sereecar.github.io/pung.html"){
+        if(link == "https://sereecar.github.io/SEREECAR/pung" || link == "https://sereecar.github.io/SEREECAR/pung/" || link == "https://sereecar.github.io/pung.html"){
            document.querySelector("#myFrame").setAttribute("src","https://script.google.com/macros/s/AKfycbyDO0G3svYqrxAsrnaaEJDH2KmxtB68HCNZR1Px8wJUvYmsK-gvy7FNtvkhPwMw5SYtXQ/exec")
         }else{
            document.querySelector("#myFrame").setAttribute("src",link3)
