--- a/pung.html
+++ b/pung.html
@@ -14,10 +14,10 @@
        let link = window.location.href;
        let link1 = link.replaceAll("%2F","/");
        let link2 = link1.split("&")[0];
-       let link3 = "https://script.google.com/macros/s/AKfycbyDO0G3svYqrxAsrnaaEJDH2KmxtB68HCNZR1Px8wJUvYmsK-gvy7FNtvkhPwMw5SYtXQ/exec?seree="+link2.split("?")[1]
+       let link3 = "https://script.google.com/macros/s/AKfycbzPPaBwnBPETiZG6Yn8ixY089Gil8yCYWZYEgDxk4_fFknnLv_YZhLDDgWvTYM0XZ8FIA/exec?seree="+link2.split("?")[1]
        console.log(link3)
-        if(link == "https://sereecar.github.io/SEREECAR/pung" || link == "https://sereecar.github.io/SEREECAR/pung/" || link == "https://sereecar.github.io/pung.html"){
-           document.querySelector("#myFrame").setAttribute("src","https://script.google.com/macros/s/AKfycbyDO0G3svYqrxAsrnaaEJDH2KmxtB68HCNZR1Px8wJUvYmsK-gvy7FNtvkhPwMw5SYtXQ/exec")
+        if(link == "https://sereecar.github.io/SEREECAR/pung" || link == "https://sereecar.github.io/SEREECAR/pung/"){
+           document.querySelector("#myFrame").setAttribute("src","")
         }else{
            document.querySelector("#myFrame").setAttribute("src",link3)
         }
