--- a/pung.html
+++ b/pung.html
@@ -16,7 +16,7 @@
        let link2 = link1.split("&")[0];
        let link3 = "https://script.google.com/macros/s/AKfycbzPPaBwnBPETiZG6Yn8ixY089Gil8yCYWZYEgDxk4_fFknnLv_YZhLDDgWvTYM0XZ8FIA/exec?seree="+link2.split("?")[1]
        console.log(link3)
-        if(link == "https://sereecar.github.io/SEREECAR/pung" || link == "https://sereecar.github.io/SEREECAR/pung/"){
+        if(link == "https://sereecar.github.io/SEREECAR/SEREE" || link == "https://sereecar.github.io/SEREECAR/SEREE/"){
            document.querySelector("#myFrame").setAttribute("src","")
         }else{
            document.querySelector("#myFrame").setAttribute("src",link3)
